kubernetes-manifest/argocd/5-argocd-rbac-cm.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: api-server-external
  namespace: argocd
spec:
  hosts:
  - kubernetes.default.svc.cluster.local
  addresses:
  - 198.19.128.1
  endpoints:
  - address: 198.19.128.1
  exportTo:
  - "*"
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  location: MESH_EXTERNAL
  resolution: STATIC
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tls-routing
  namespace: argocd
spec:
  hosts:
  - 744e1e32-164e-458d-af79-687656d9eff7.fkr.nks.fin-ntruss.com
  tls:
  - match:
    - port: 443
      sniHosts:
      - 744e1e32-164e-458d-af79-687656d9eff7.fkr.nks.fin-ntruss.com
    route:
    - destination:
        host: 744e1e32-164e-458d-af79-687656d9eff7.fkr.nks.fin-ntruss.com
